@@ -114,14 +114,11 @@
 			<option value="1">JYES</option>
 		</field>
 
-
-		<field name="xreference" type="text"
-			label="COM_CONTENT_FIELD_XREFERENCE_LABEL" description="COM_CONTENT_FIELD_XREFERENCE_DESC"
-			class="inputbox" size="20" />
-
 		<field name="rules" type="rules" label="COM_CONTENT_FIELD_RULES_LABEL"
 			description="COM_CONTENT_FIELD_RULES_DESC" class="inputbox" filter="rules"
-			component="com_content" section="article" />
+			component="com_content" section="article"
+		/>
+			
 	</fieldset>
 
 	<fields name="attribs">
@@ -263,15 +260,17 @@
 
 	<fields name="metadata">
 
-		<field name="robots" type="list"
-			label="JFIELD_METADATA_ROBOTS_LABEL" description="JFIELD_METADATA_ROBOTS_DESC"
+		<field name="robots" 
+			type="list"
+			label="JFIELD_METADATA_ROBOTS_LABEL" 
+			description="JFIELD_METADATA_ROBOTS_DESC"
 		>
 			<option value="">JGLOBAL_USE_GLOBAL</option>
-			<option value="0">JGLOBAL_INDEX_FOLLOW</option>
-			<option value="1">JGLOBAL_NOINDEX_FOLLOW</option>
-			<option value="2">JGLOBAL_INDEX_NOFOLLOW</option>
-			<option value="3">JGLOBAL_NOINDEX_NOFOLLOW</option>
-			<option value="4">JGLOBAL_NO_ROBOTS_TAG</option>
+			<option value="index, follow">JGLOBAL_INDEX_FOLLOW</option>
+			<option value="noindex, follow">JGLOBAL_NOINDEX_FOLLOW</option>
+			<option value="index, nofollow">JGLOBAL_INDEX_NOFOLLOW</option>
+			<option value="noindex, nofollow">JGLOBAL_NOINDEX_NOFOLLOW</option>
+			<option value=" ">JGLOBAL_NO_ROBOTS_TAG</option>
 		</field>
 
 		<field name="author" type="text"
@@ -281,6 +280,11 @@
 		<field name="rights" type="textarea" label="JFIELD_META_RIGHTS_LABEL"
 			description="JFIELD_META_RIGHTS_DESC" required="" filter="string"
 			cols="30" rows="2" />
+		<field name="xreference" type="text"
+			label="COM_CONTENT_FIELD_XREFERENCE_LABEL" description="COM_CONTENT_FIELD_XREFERENCE_DESC"
+			class="inputbox" size="20" />
+
+		
 	</fields>
 
 </form>
