@@ -47,16 +47,18 @@
 				label="JFIELD_META_KEYWORDS_LABEL" description="COM_MENUS_ITEM_FIELD_META_KEYWORDS_DESC"
 				rows="3" cols="40" />
 
-			<field name="robots" type="list"
-				label="JFIELD_METADATA_ROBOTS_LABEL" description="JFIELD_METADATA_ROBOTS_DESC"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JGLOBAL_INDEX_FOLLOW</option>
-				<option value="1">JGLOBAL_NOINDEX_FOLLOW</option>
-				<option value="2">JGLOBAL_INDEX_NOFOLLOW</option>
-				<option value="3">JGLOBAL_NOINDEX_NOFOLLOW</option>
-				<option value="4">JGLOBAL_NO_ROBOTS_TAG</option>
-			</field>
+			<field name="robots" 
+			type="list"
+			label="JFIELD_METADATA_ROBOTS_LABEL" 
+			description="JFIELD_METADATA_ROBOTS_DESC"
+		>
+			<option value="">JGLOBAL_USE_GLOBAL</option>
+			<option value="index, follow">JGLOBAL_INDEX_FOLLOW</option>
+			<option value="noindex, follow">JGLOBAL_NOINDEX_FOLLOW</option>
+			<option value="index, nofollow">JGLOBAL_INDEX_NOFOLLOW</option>
+			<option value="noindex, nofollow">JGLOBAL_NOINDEX_NOFOLLOW</option>
+			<option value=" ">JGLOBAL_NO_ROBOTS_TAG</option>
+		</field>
 
 			<field name="secure" type="radio"
 				label="COM_MENUS_ITEM_FIELD_SECURE_LABEL" description="COM_MENUS_ITEM_FIELD_SECURE_DESC"
