@@ -115,35 +115,6 @@
 			class="inputbox" format="%Y-%m-%d %H:%M:%S" size="20"
 			filter="user_utc" />
 
-		<field name="metakey" type="textarea"
-			label="JFIELD_META_KEYWORDS_LABEL" description="JFIELD_META_KEYWORDS_DESC"
-			class="inputbox" rows="3" cols="30" />
-
-		<field name="metadesc" type="textarea"
-			label="JFIELD_META_DESCRIPTION_LABEL" description="JFIELD_META_DESCRIPTION_DESC"
-			class="inputbox" rows="3" cols="30" />
-
-		<field name="xreference" type="text"
-			label="JFIELD_XREFERENCE_LABEL" description="JFIELD_XREFERENCE_DESC"
-			class="inputbox" size="20" />
-
-		<field name="robots" type="list"
-			label="JFIELD_METADATA_ROBOTS_LABEL" description="JFIELD_METADATA_ROBOTS_DESC" >
-			<option value="">JGLOBAL_USE_GLOBAL</option>
-			<option value="0">JGLOBAL_INDEX_FOLLOW</option>
-			<option value="1">JGLOBAL_NOINDEX_FOLLOW</option>
-			<option value="2">JGLOBAL_INDEX_NOFOLLOW</option>
-			<option value="3">JGLOBAL_NOINDEX_NOFOLLOW</option>
-			<option value="4">JGLOBAL_NO_ROBOTS_TAG</option>
-		</field>
-
-		<field name="author" type="text"
-			label="JAUTHOR" description="JFIELD_METADATA_AUTHOR_DESC"
-			size="20" />
-
-		<field name="rights" type="textarea" label="JFIELD_META_RIGHTS_LABEL"
-			description="JFIELD_META_RIGHTS_DESC" required="" filter="string"
-			cols="30" rows="2" />
 	</fieldset>
 
 	<fields name="params">
@@ -169,25 +140,4 @@
 		</fieldset>
 	</fields>
 
-	<fields name="metadata">
-		<fieldset name="jmetadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
-			<field name="robots" type="list"
-				label="JFIELD_METADATA_ROBOTS_LABEL" description="JFIELD_METADATA_ROBOTS_DESC"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JGLOBAL_INDEX_FOLLOW</option>
-				<option value="1">JGLOBAL_NOINDEX_FOLLOW</option>
-				<option value="2">JGLOBAL_INDEX_NOFOLLOW</option>
-				<option value="3">JGLOBAL_NOINDEX_NOFOLLOW</option>
-				<option value="4">JGLOBAL_NO_ROBOTS_TAG</option>
-			</field>
-
-			<field name="author" type="text" label="JAUTHOR"
-				description="JFIELD_METADATA_AUTHOR_DESC" size="20" />
-
-			<field name="rights" type="textarea"
-				label="JFIELD_META_RIGHTS_LABEL" description="JFIELD_META_RIGHTS_DESC"
-				required="" filter="string" cols="30" rows="2" />
-		</fieldset>
-	</fields>
 </form>
