@@ -239,11 +239,18 @@
 	<fields name="metadata">
 		<fieldset name="metadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
 
-			<field name="robots" type="text"
-				description="JFIELD_METADATA_ROBOTS_DESC"
-				label="JFIELD_METADATA_ROBOTS_LABEL"
-				size="20"
-			/>
+			<field name="robots" 
+			type="list"
+			label="JFIELD_METADATA_ROBOTS_LABEL" 
+			description="JFIELD_METADATA_ROBOTS_DESC"
+		>
+			<option value="">JGLOBAL_USE_GLOBAL</option>
+			<option value="index, follow">JGLOBAL_INDEX_FOLLOW</option>
+			<option value="noindex, follow">JGLOBAL_NOINDEX_FOLLOW</option>
+			<option value="index, nofollow">JGLOBAL_INDEX_NOFOLLOW</option>
+			<option value="noindex, nofollow">JGLOBAL_NOINDEX_NOFOLLOW</option>
+			<option value=" ">JGLOBAL_NO_ROBOTS_TAG</option>
+		</field>
 
 			<field name="rights" type="text"
 				description="JFIELD_METADATA_RIGHTS_DESC"
