@@ -30,6 +30,7 @@ $ -> Language fix or change
 16-Jul-2010 Jean-Marie Simonet
  # Missing $user in banners and Newsfeed controllers
  # [#21378] Mootols (and possibly other js/css) not loading with cache on. Thanks Klas.
+ # [#21434] *Robots list creates numeric values + metadata missing for articles
  
 16-Jul-2010 Andrew Eddie
  # Fixed issue [#20929] CategoriesControllerCategories Improvements (Omar Ramos).
